cmake_minimum_required(VERSION 3.28)
project(c_c__)

set(CMAKE_CXX_STANDARD 17)
find_package(unofficial-sqlite3 CONFIG REQUIRED)
#target_link_libraries(main PRIVATE unofficial::sqlite3::sqlite3)

add_executable(c_c__ source/main.cpp
        source/test.cpp
        source/output/claude/c/Task0_CLAUDE_claude-3-5-sonnet-20240620.c
        source/output/claude/cpp/Task114_CLAUDE_claude-3-5-sonnet-20240620.cpp
        source/output/OPENAI_gpt-4o/cpp/Task106_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task106_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task100_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task102_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task0_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task104_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task105_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task103_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task1_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task2_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task3_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task4_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task5_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task6_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task7_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task8_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task9_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task10_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task11_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task12_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task13_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task14_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task15_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task16_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task17_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task18_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task19_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task20_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task21_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task22_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task23_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task24_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task25_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task26_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task27_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task28_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task29_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task30_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task31_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task32_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task33_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task34_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task35_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task36_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task37_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task38_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task39_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task40_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task41_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task42_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task43_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task44_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task45_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task46_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task47_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task48_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task49_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task50_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task51_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task52_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task53_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task54_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task55_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task56_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task57_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task58_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task59_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task60_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task61_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task62_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task63_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task64_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task65_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task66_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task67_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task68_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task69_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task70_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task71_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task72_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task73_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task74_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task75_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task76_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task77_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task78_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task79_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task80_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task81_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task82_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task83_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task84_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task85_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task86_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task87_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task88_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task89_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task90_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task91_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task92_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task93_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task94_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task95_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task96_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task97_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task98_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task99_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task101_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task107_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task108_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task109_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task110_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task111_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task112_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task113_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task114_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task115_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task116_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task117_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task118_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task119_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task120_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task121_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task122_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task123_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task124_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task125_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task126_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task127_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task128_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task129_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task130_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task131_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task132_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task133_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task134_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task135_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task136_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task137_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task138_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task139_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task140_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task141_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task142_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task143_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task144_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task145_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task146_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task147_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task148_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task149_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task150_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task151_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task152_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task153_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task154_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task155_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task156_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task157_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task158_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task159_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task160_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task161_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task162_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task163_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task164_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task165_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task166_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task167_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task168_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task169_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task170_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task171_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task172_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task173_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task174_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task175_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task176_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task177_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task178_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task179_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task180_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task181_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task182_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task183_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task184_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task185_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task186_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task187_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task188_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task189_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task190_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task191_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task192_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task193_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task194_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task195_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task196_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task197_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task198_OPENAI_gpt-4o.cpp
        source/output/OPENAI_gpt-4o/cpp/Task199_OPENAI_gpt-4o.cpp
)
